--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ nav a{
 section.vote{
     margin: 0px auto;
     padding: 10px;
-    width: 910px;
+    width: 940px;
     overflow: auto;  
 }
 
@@ -41,6 +41,10 @@ section.vote .winner{
     margin: 0px 10px 20px 10px;
     box-shadow: 8px 8px 5px #888;
     float: none;
+}
+
+section.vote div.election{
+    margin-left: 30px;
 }
 
 section.vote img.baby{
