I changed the main text color from fuschia to blue.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav{
 }
 
 nav a{
-    color: fuchsia;
+    color: rgb(52,202,186);
 }
 
 section.vote{
@@ -79,7 +79,7 @@ footer{
 }
 
 footer a{
-    color: fuchsia;
+    color: rgb(52,202,186);
 }
     
     
