Individual pages are up 	-Fixed the silly baby-war vs. babywar issue 	-Fixed the path names issues all around 	-Individual pages work with voting and everythang

--- a/style.css
+++ b/style.css
@@ -82,4 +82,14 @@ footer a{
     color: rgb(52,202,186);
 }
     
-    
+section.personal{
+    text-align: center;
+}
+
+section.personal img{
+    box-shadow: 8px 8px 5px #888;
+    padding: 1px;
+    border: solid black thin;
+    margin: 20px auto;
+    max-width: 700px;
+}
