--- a/style.css
+++ b/style.css
@@ -36,38 +36,36 @@ section.content .center{
 }
 
 section.content .winner{
-    width: 150px;
+    width: 100px;
     text-align: center;
     border: solid black thin;
     padding: 1px;
-    margin: 10px 10px 20px 10px;
+    margin: 15px;
     box-shadow: 8px 8px 5px #888;
-    float: none;
+    float: left;
+    font-size: 75%;
 }
 
 section.content div.election{
-    margin-left: 10px;
     overflow: auto;
-    float: left;
+    margin: 0px auto;
 }
 
 section.content div.election *{
     float: left;
 }
 
-section.content #leftbox{
-    float: left;
-}
-
-section.content .winner *{
-    float: none;
+section.content #result{
+    width: 268px;
+    margin: 15px auto;
+    overflow: auto;
 }
 
 img.baby{
     border: solid black thin;
     box-shadow: 8px 8px 5px #888;
     padding: 1px;
-    margin: 10px;
+    margin: 15px;
 }
 
 img.baby:hover{
@@ -83,7 +81,7 @@ img.baby:hover{
 
 section.content #vs *{
     float: none;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 footer{
